@@ -71,7 +71,8 @@ public class AStar {
      * @return List of coordinates representing the path, or empty list if no path exists
      */
     public static ArrayList<Coordinates> findPath(GameMap grid, int startX, int startY, int goalX, int goalY) {
-        if (grid == null || grid.getLength()== 0 || grid.getWidth() == 0) {
+        if (grid == null || grid.getLength() == 0 || grid.getWidth() == 0) {
+            System.out.println("Debug: Grid is invalid");
             return new ArrayList<>();
         }
 
@@ -79,26 +80,38 @@ public class AStar {
         int cols = grid.getWidth();
 
         // Validate input coordinates
-        if (!isValid(startX, startY, rows, cols) || !isValid(goalX, goalY, rows, cols) ||
-                grid.isBlocked(startX, startY) || grid.isBlocked(goalX, goalY)) {
+        if (!isValid(startX, startY, rows, cols) || !isValid(goalX, goalY, rows, cols)) {
+            System.out.println("Debug: Invalid coordinates - Start(" + startX + "," + startY +
+                             ") Goal(" + goalX + "," + goalY + ")");
+            return new ArrayList<>();
+        }
+
+        if (grid.isBlocked(startX, startY) || grid.isBlocked(goalX, goalY)) {
+            System.out.println("Debug: Start or goal position is blocked");
             return new ArrayList<>();
         }
 
         PriorityQueue<Node> openSet = new PriorityQueue<>();
-        Set<Node> closedSet = new HashSet<>();
+        // Change: Use a HashSet that only considers x and y for visited nodes
+        Set<String> closedSet = new HashSet<>();
 
-        // Start node with no initial direction (-1)
-        Node startNode = new Node(startX, startY, 0, calculateHeuristic(startX, startY, goalX, goalY, -1), null, -1);
+        Node startNode = new Node(startX, startY, 0,
+            calculateHeuristic(startX, startY, goalX, goalY, -1), null, -1);
         openSet.add(startNode);
 
         while (!openSet.isEmpty()) {
             Node current = openSet.poll();
+            String currentPos = current.x + "," + current.y;
 
             if (current.x == goalX && current.y == goalY) {
                 return reconstructPath(current);
             }
 
-            closedSet.add(current);
+            // Change: Only add position to closed set if we haven't processed this position yet
+            if (closedSet.contains(currentPos)) {
+                continue;
+            }
+            closedSet.add(currentPos);
 
             // Try all 8 directions
             for (int i = 0; i < DIRECTIONS.length; i++) {
@@ -109,58 +122,98 @@ public class AStar {
                     continue;
                 }
 
-                // Calculate new cost including turn penalty if applicable
+                String newPos = newX + "," + newY;
+                if (closedSet.contains(newPos)) {
+                    continue;
+                }
+
                 double turnPenalty = 0;
                 if (current.direction != -1 && current.direction != i) {
                     turnPenalty = TURN_COST;
                 }
 
+                // Change: Adjust movement costs
                 double movementCost = (i % 2 == 0) ? STRAIGHT_COST : DIAGONAL_COST;
+                // Reduce the impact of turn penalty
+                turnPenalty *= 0.5;
                 double newG = current.g + movementCost + turnPenalty;
 
                 Node neighbor = new Node(newX, newY, newG,
-                        calculateHeuristic(newX, newY, goalX, goalY, i),
-                        current, i);
+                    calculateHeuristic(newX, newY, goalX, goalY, i),
+                    current, i);
 
-                if (closedSet.contains(neighbor)) {
-                    continue;
-                }
-
-                if (!openSet.contains(neighbor) || newG < neighbor.g) {
+                // Change: Simplified neighbor handling
+                if (!openSet.contains(neighbor)) {
                     openSet.add(neighbor);
+                } else {
+                    // Update the existing neighbor if this path is better
+                    for (Node existingNode : openSet) {
+                        if (existingNode.equals(neighbor) && existingNode.g > newG) {
+                            openSet.remove(existingNode);
+                            openSet.add(neighbor);
+                            break;
+                        }
+                    }
                 }
             }
         }
 
-        return new ArrayList<>(); // No path found
+        System.out.println("Debug: No path found after exploring " + closedSet.size() + " nodes");
+        return new ArrayList<>();
     }
+
+    // Modify the calculateHeuristic method to be more permissive
+    private static double calculateHeuristic(int startX, int startY, int goalX, int goalY, int currentDirection) {
+        int dx = Math.abs(goalX - startX);
+        int dy = Math.abs(goalY - startY);
+
+        // Use octile distance for more accurate heuristic
+        double baseCost = Math.max(dx, dy) + (DIAGONAL_COST - 1) * Math.min(dx, dy);
+
+        if (currentDirection == -1) {
+            return baseCost;
+        }
+
+        // Reduce the impact of turn penalties in the heuristic
+        double angleToGoal = Math.atan2(goalY - startY, goalX - startX);
+        int idealDirection = (int) Math.round(4 * angleToGoal / Math.PI) & 7;
+
+        int directionDiff = Math.abs(currentDirection - idealDirection);
+        int minTurns = Math.min(directionDiff, 8 - directionDiff);
+
+        // Reduce the turn penalty in the heuristic
+        return baseCost + (minTurns * TURN_COST * 0.1);
+    }
+
+    // Keep the existing reconstructPath method
+
 
     private static boolean isValid(int x, int y, int rows, int cols) {
         return x >= 0 && x < cols && y >= 0 && y < rows;
     }
 
-    private static double calculateHeuristic(int startX, int startY, int goalX, int goalY, int currentDirection) {
-        int dx = Math.abs(goalX - startX);
-        int dy = Math.abs(goalY - startY);
-
-        // Base movement cost
-        double baseCost = Math.min(dx, dy) * DIAGONAL_COST + Math.abs(dx - dy) * STRAIGHT_COST;
-
-        // If we don't have a current direction, return just the base cost
-        if (currentDirection == -1) {
-            return baseCost;
-        }
-
-        // Calculate ideal direction to goal
-        double angleToGoal = Math.atan2(goalY - startY, goalX - startX);
-        int idealDirection = (int) Math.round(4 * angleToGoal / Math.PI) & 7;
-
-        // Calculate minimum turns needed
-        int directionDiff = Math.abs(currentDirection - idealDirection);
-        int minTurns = Math.min(directionDiff, 8 - directionDiff);
-
-        return baseCost + (minTurns * TURN_COST);
-    }
+//    private static double calculateHeuristic(int startX, int startY, int goalX, int goalY, int currentDirection) {
+//        int dx = Math.abs(goalX - startX);
+//        int dy = Math.abs(goalY - startY);
+//
+//        // Base movement cost
+//        double baseCost = Math.min(dx, dy) * DIAGONAL_COST + Math.abs(dx - dy) * STRAIGHT_COST;
+//
+//        // If we don't have a current direction, return just the base cost
+//        if (currentDirection == -1) {
+//            return baseCost;
+//        }
+//
+//        // Calculate ideal direction to goal
+//        double angleToGoal = Math.atan2(goalY - startY, goalX - startX);
+//        int idealDirection = (int) Math.round(4 * angleToGoal / Math.PI) & 7;
+//
+//        // Calculate minimum turns needed
+//        int directionDiff = Math.abs(currentDirection - idealDirection);
+//        int minTurns = Math.min(directionDiff, 8 - directionDiff);
+//
+//        return baseCost + (minTurns * TURN_COST);
+//    }
 
     private static ArrayList<Coordinates> reconstructPath(Node node) {
         ArrayList<Coordinates> path = new ArrayList<>();
@@ -171,26 +224,27 @@ public class AStar {
         return path;
     }
 
-    public static ArrayList<Integer> calculateEachMoveCost(ArrayList<Coordinates> path) {
-        int currentX = path.get(0).x();
-        int currentY = path.get(0).y();
+    public static ArrayList<Double> calculateEachMoveCost(ArrayList<Coordinates> path) {
+        int currentX = path.getFirst().x();
+        int currentY = path.getFirst().y();
         int dx = 0;
         int dy = 0;
-        ArrayList<Integer> moveCost = new ArrayList<>();
+        ArrayList<Double> moveCost = new ArrayList<>();
+        moveCost.add(0.0);
         for (Coordinates c : path) {
             int nextX = c.x();
             int nextY = c.y();
             if (nextX == currentX && nextY == currentY) {
-                moveCost.add(0);
+                moveCost.add(0.0);
             }
             else if (dx == nextX - currentX && dy == nextY - currentY) {
-                moveCost.add(10);
+                moveCost.add(0.05);
             }
             else if ((dx == nextX - currentX && dy != nextY - currentY) || (dx != nextX - currentX && dy == nextY)) {
-                moveCost.add(14);
+                moveCost.add(0.07);
             }
             else if (dx != nextX - currentX && dy != nextY - currentY) {
-                moveCost.add(100);
+                moveCost.add(0.5);
             }
             dx = nextX - currentX;
             dy = nextY - currentY;
